# chesscom-scraper

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
app/: __main__.py  chesscom.py  database.py  exporter.py  lichess.py  pipeline.py  repo.py  scraper.py  site.py  types.py
coach_scraper/: __main__.py  chesscom.py  database.py  lichess.py  locale.py  pipeline.py
sql/: export.sql  init.sql  load_export.sql
