[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Joshua Potter <jrpotter2112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
aiohttp = "^3.8.6"
lxml = "^4.9.3"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "app.__main__:main"

[[tool.mypy.overrides]]
module = "aiohttp"
ignore_missing_imports = true
